--- a/config/index.html
+++ b/config/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Docker+LNMP 開發環境</title>
+<title>LNMP 開發環境</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="author" content="imagine@gmail.com">
-<meta name="description" content="您已成功安裝 Docker+LNMP 開發環境">
 <style type="text/css">
 <!--
 body {
@@ -25,7 +23,7 @@ font-family:tahoma,arial,宋体,helvetica,sans-serif;
 <div id="main">
 <h2>
 
-        <p>Docker (Centos6-Lnmp-Laravel5) </p>
+        <p>Lnmp-Laravel5</p>
 
         <h3><a id="user-content-description" class="anchor" href="#description" aria-hidden="true"><span class="octicon octicon-link"></span></a>Description</h3>
 
@@ -58,12 +56,6 @@ font-family:tahoma,arial,宋体,helvetica,sans-serif;
                     <li>Redis 配置文件：/usr/local/redis/etc/redis.conf<br/><br/></li>
                 </ol>
             </li>
-            <li>本地端與容器對應路徑
-                <ol>
-                    <li>/home/wwwroot/website : C:\Users\{Your Username}\Documents\Kitematic\project</li>
-                    <li>/usr/local/mariadb/var: C:\Users\{Your Username}\Documents\Kitematic\project\database</li>
-                </ol>
-            </li>
         </ul>
 
         <h3><a id="user-content-config-port" class="anchor" href="#config-port" aria-hidden="true"><span class="octicon octicon-link"></span></a>Config Port</h3>
@@ -71,7 +63,7 @@ font-family:tahoma,arial,宋体,helvetica,sans-serif;
         <ol>
             <li>&nbsp;&nbsp;&nbsp;80：/home/wwwroot/default - 導覽頁面</li>
             <li>&nbsp;&nbsp;&nbsp;81：/home/wwwroot/laravel5/public - Laravel5 ClearVer</li>
-            <li>&nbsp;&nbsp;&nbsp;81：/home/wwwroot/website/public - Project Dir</li>
+            <li>&nbsp;&nbsp;&nbsp;82：/home/wwwroot/website/public - Project Dir</li>
             <li>3306：MariaDB Port</li>
         </ol>
 
